sidebar chart click fix with loop

--- a/src/app/barchart/barchart.component.html
+++ b/src/app/barchart/barchart.component.html
@@ -7,9 +7,9 @@
    [type]="type1"
    [data]="data1"
   
-   [options]="options1"
-   [width]="width1"></google-chart>
-   <!-- [height]="height1"> -->
+   [options]="options1"></google-chart>
+   <!-- [height]="height1" -->
+   
 
 
 <google-chart #chart2
@@ -17,5 +17,5 @@
 [type]="type2"
 [data]="data2"
 
-[options]="options2"
-[width]="width2"></google-chart>
+[options]="options2"></google-chart>
+<!-- [width]="width2"> -->
