--- a/src/app/piechart/piechart.component.html
+++ b/src/app/piechart/piechart.component.html
@@ -1,10 +1,15 @@
 <p>piechart works!</p>
-<!-- <google-chart #chart
-[title]="title"
-[type]="type"
-[data]="data"
+<google-chart #chart
+[title]="title1"
+[type]="type1"
+[data]="data1"
 
-[options]="options"
-[width]="width"
-[height]="height">
-</google-chart> -->
+[options]="options1">
+</google-chart>
+
+<google-chart #chart
+[title]="title2"
+[type]="type2"
+[data]="data2"
+
+[options]="options2"></google-chart>
